# tradeguard-engine

./: .env.example  .gitignore  README.md  check_platform.sh  docker-compose.yml  run_api.sh  run_dashboard.sh
.github/workflows/: ci.yml
api/: Dockerfile  main.py  requirements.txt
api/brokers/: __init__.py  alpaca.py  base.py  simulated.py
config/: optimization_config.json  risk_config.json
cpp_engine/: CMakeLists.txt
cpp_engine/include/: Backtester.hpp  Benchmark.hpp  CandleBuilder.hpp  ConfigLoader.hpp  DecisionLogger.hpp  MarketData.hpp  PerformanceMetrics.hpp  RiskEngine.hpp  SignalEngine.hpp  Types.hpp
cpp_engine/src/: Backtester.cpp  Benchmark.cpp  CandleBuilder.cpp  ConfigLoader.cpp  DecisionLogger.cpp  MarketData.cpp  PerformanceMetrics.cpp  RiskEngine.cpp  SignalEngine.cpp  main.cpp
cpp_engine/tests/: test_engine.cpp
dashboard/: Dockerfile  package-lock.json
dashboard/public/data/: benchmark_report.txt  optimization_results.csv  summary.json  trades.csv
dashboard/src/: App.css  App.tsx
data/: sample_ticks.csv
output/: benchmark_report.txt  performance_summary.md
output/optimization_runs/run_000/: benchmark_report.txt
output/optimization_runs/run_001/: benchmark_report.txt  decisions.csv
output/optimization_runs/run_002/: benchmark_report.txt
output/optimization_runs/run_003/: benchmark_report.txt  decisions.csv
output/optimization_runs/run_004/: benchmark_report.txt
output/optimization_runs/run_005/: benchmark_report.txt  summary.json
output/optimization_runs/run_006/: benchmark_report.txt
python_analytics/: generate_sample_data.py  optimize_strategy.py  report.py
(+30 files in other folders)
